<resources>
    <string name="app_name" translatable="false">Appli Concert</string>

    <!-- Attributs -->
    <string name="nom">Nom</string>
    <string name="date">Date</string>
    <string name="heure">Heure</string>
    <string name="duree">Durée</string>
    <string name="lng" translatable="false">Longitude</string>
    <string name="lat" translatable="false">Latitude</string>


    <!-- ADD_CONCERT -->
    <string name="add_concert_titre">Rajouter un concert sur ma position</string>
    <string name="add_concert_photo">Ajouter une photo</string>
    <string name="add_concert_gallerie" translatable="false">Ajouter via la gallerie</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>

    <string name="name_hint">Entrez un nom</string>
    <string name="date_hint">Entrez une date</string>
    <string name="heure_hint">Entrez une heure</string>
    <string name="duree_hint">Entrez une durée</string>

    <!-- LISTE_CONCERT -->
    <string name="liste_concert_titre">Liste des concerts</string>


    <!-- MAIN -->
    <string name="main_ajouter_concert">Rajouter un concert</string>


    <!-- CONCERT_INFO_WINDOW_GOOGLE_MAP -->
    <string name="info_adapter_heure">heure(s)</string>

    <!-- BRODCAST_RECEIVER -->
    <string name="broadcast_proxi">Concert à proximité</string>
    <string name="broadcast_leConcert">Le concert </string>
    <string name="broadcast_proche">est proche de vous, voulez vous le voir ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>

    <!--ROW_CONCERT-->
    <string name="voir">Voir</string>
    <string name="title_activity_maps" translatable="false">Appli Concert</string>

</resources>
