<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddConcertActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/heure"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="Heure : " />

    <EditText
        android:id="@+id/edit_duree"
        android:layout_width="173dp"
        android:layout_height="43dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="288dp"
        android:hint="@string/duree_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/duree"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="Durée : " />

    <EditText
        android:id="@+id/nom_concert"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="100dp"
        android:hint="@string/name_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lat_edit"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_marginStart="244dp"
        android:layout_marginLeft="244dp"
        android:layout_marginTop="484dp"
        android:gravity="center"
        android:hint="@string/lat"
        android:inputType="datetime|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lng_edit"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="484dp"
        android:gravity="center"
        android:hint="@string/lng"
        android:inputType="datetime|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="244dp"
        android:gravity="center"
        android:text="@string/lng"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="244dp"
        android:layout_marginLeft="244dp"
        android:layout_marginTop="244dp"
        android:gravity="center"
        android:text="@string/lat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="402dp"
        android:layout_height="73dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/add_concert_titre"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/nom"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="Nom : " />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="Date : " />

    <EditText
        android:id="@+id/edit_DATE"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="156dp"
        android:hint="@string/date_hint"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_heure"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="25dp"
        android:hint="@string/heure_hint"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_DATE" />

    <Button
        android:id="@+id/ajout_photo"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="121dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:background="#00BCD4"
        android:onClick="prendrePhoto"
        android:text="@string/add_concert_photo"
        android:textColorHighlight="#00BCD4"
        android:textColorLink="#03A9F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_duree" />

    <Button
        android:id="@+id/ajout_gallerie"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="121dp"
        android:layout_height="69dp"
        android:layout_marginStart="272dp"
        android:layout_marginLeft="272dp"
        android:layout_marginTop="20dp"
        android:background="#00BCD4"
        android:onClick="prendreGallerie"
        android:text="@string/add_concert_gallerie"
        android:textColorHighlight="#00BCD4"
        android:textColorLink="#03A9F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_duree" />

    <Button
        android:id="@+id/valider"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="193dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="124dp"
        android:background="#8BC34A"
        android:onClick="valider"
        android:text="@string/valider"
        android:textColorHint="#00C05353"
        android:textColorLink="#8DEB0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajout_photo" />

    <Button
        android:id="@+id/anuler"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="193dp"
        android:layout_height="0dp"
        android:layout_marginStart="212dp"
        android:layout_marginLeft="212dp"
        android:layout_marginTop="124dp"
        android:background="#E91E63"
        android:onClick="annuler"
        android:text="@string/annuler"
        android:textColorHint="#00C05353"
        android:textColorLink="#8DEB0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajout_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>